--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dotenv>=0.9.9",
     "flask>=3.1.1",
     "flask-pymongo>=3.0.1",
     "flask-restful>=0.3.10",
